Fix all unnecessary showing of scrollbars

--- a/client/src/app/deck/deck.module.scss
+++ b/client/src/app/deck/deck.module.scss
@@ -683,7 +683,7 @@
 		background-color: var(--gray-800);
 		border-left: solid 2px black;
 		height: 100%;
-		overflow: scroll;
+		overflow: auto;
 	}
 
 	.mobileDeckPreview {
